# finagent-review

./: README.md  REVIEW_CONTEXT.md  REVIEW_SOURCE.json  pyproject.toml  pytest.ini
docs/: 2026-03-15_event_mining_benchmark_refactor_walkthrough_v1.md  2026-03-23_two_wheeler_pilot_walkthrough.md
finagent/: adapters.py  cli.py  cli_research.py  consensus.py  db.py  event_extraction.py  event_replay.py  event_runs.py  llm_adapter.py  market_data.py  market_screener.py  memory.py  memory_consolidation.py  openbb_adapter.py  openbb_mcp_server.py  openmind_adapter.py  paths.py  proxy_pool.py  research_contracts.py  research_ledger.py  retrieval_stack.py  sector_grammars.py  sentinel.py  source_adapters.py  source_policy.py  theme_report.py  thesis_bridge.py  two_wheeler_catalog.py  two_wheeler_delta_collector.py  two_wheeler_feed_connector.py  two_wheeler_feed_pull.py  two_wheeler_refresh.py  utils.py  views.py  writeback.py  writeback_engine.py
scripts/: activate_two_wheeler_pipeline.py  aggregate_theses.py  batch_extract_v2.py  batch_ingest_fuzong.py  batch_semi_claims_extract.py  build_claim_graph.py  build_two_wheeler_catalog.py  claim_verification_guardrails.py  codexread_deep_catalog.py  codexread_inventory.py  codexread_semantic_catalog.py  collect_two_wheeler_source_delta.py  conflict_scan.py  connect_two_wheeler_feeds.py  cross_kol_analysis.py  graph_hygiene_report.py  homepc_probe.py  import_two_wheeler_source_delta.py  live_cases_smoke.py  migrate_claim_fields.py  normalize_claims.py  pull_two_wheeler_feeds.py  refresh_claim_freshness.py  seed_competitive_data.py  (+8 more)
(+131 files in other folders)
