[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finagent"
version = "2.0.0-alpha"
description = "Local-first thesis operating system for personal investing research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.4",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "langgraph>=0.3",
  "langchain-core>=0.3",
  "langgraph-checkpoint-sqlite>=3.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
all = ["neo4j>=5.0"]

[project.scripts]
finagent = "finagent.cli:main"
finagent-research = "finagent.cli_research:main"

[tool.setuptools]
packages = ["finagent", "finagent.graph_v2", "finagent.agents", "finagent.parsers"]

